<resources>
    <string name="app_name">MidtronicsEvaluation</string>
    <string name="education">education</string>
    <string name="capital">Capital:</string>
    <string name="population">Population:</string>
    <string name="area">Area:</string>
    <string name="region">Region:</string>
    <string name="subregion">SubRegion:</string>
    <string name="choose">Choose a country</string>
    <string name="name">Ali Yilmaz</string>
    <string name="country">Country : Turkey </string>
    <string name="experience">Work Experience :  \n ARLA TECHNOLOGIES, Istanbul, Turkey • 2016-2018 \n
Software company develops and sells smart house and smart city software. \n
Android Developer \n
Played key role in all phases of Android and Asp.NET software development and implementation. \n
Tasks Performed: \n
• Performed requirements gathering and analysis and prepared functional specifications for smart house system. \n
• Developed an Android application for company’s technical service. \n
• Developed industry standard code.\n
• Implemented JSON parser class to parse the JSON\n
• Used libraries like Retrofit, GSON, OkHttp,Picasso.\n
• Used Android Junit to write the test cases.\n
• Perfomance Tuning Tools are used like CPU Profiler, Memory Profler.\n
• Memory Leakage detected and Services, AsyncTasks, Handlers, BroadcastReceivers managed and destroyed according to appropriate lifecycle of Activity.\n
Achievements:\n
• Ensured timely completion of complex projects despite challenging deadlines. Company sold the software to the department of Energy in Turkey which still continues to use it.\n
• Android application is also used by many smart house buildings in Istanbul, Batman and Erzurum in Turkey.\n
• Performance is increased.\n
• Crashing Problem is solved because of memory problem.\n
• Oversaw management of multiple tasks including scheduling and deadlines.\n
Technologies Used: Android, Java, Asp.Net, HTML, CSS, JavaScript, Bootstrap, AJAX, SQL Server, SQLite, Android Studio, Visual Studio, REST Web Service, GitLab\n
\n
SMARTUPNETWORK, Istanbul, Turkey • 2016 November-2017 February \n
A Software Development Company.\n
Android Developer\n
Played key role in Android software development and implementation.\n
Tasks Performed:\n
• Developed industry standard code, performed code reviews, and fixed bugs.\n
• Developed application named Polenio which is on the Google play store.\n
Achievements:\n
• Ensured timely completion of tasks despite challenging deadlines.\n
Technologies Used: Android, Java, Volley, REST\n
        \n
SONET INTERNET SERVICE PROVIDER, Gaziantep, Turkey • 2016\n
Software Development Company headquartered in Turkey.\n
Android Developer\n
Contributed to Android software development and implementation of the company application.\n
Tasks Performed:\n
• Developed company application named Sonet and placed it in Google Play Store.\n
• Implemented JSON parser class to parse the JSON\n
• Used Volley library.\n
• Used Android Junit to write the test cases.\n
• Implemented company website’s credit card billing page using Curl library of Php.\n
Achievements:\n
• Developed application named Sonet which is still on Google play store.\n
Technologies Used: Android, Java, Php, HTML, CSS, JavaScript, Bootstrap, Android Studio, REST Web Service.\n
        \n
ACADEMIA INFORMATICS, Gaziantep, Turkey • 2015- 2016\n
Software Development Company headquartered in Turkey.\n
Android Developer\n
Contributed to Android software development and implementation of the student Id barcode reading application of university. It allows to see student his/her information, activities in the school, and creating his/her own activities.\n
Tasks Performed:\n
• Designed and developed user interface,\n
• Implemented the app in MVP architecture.\n
• Implemented JSON parser class to parse the JSON\n
• Used libraries like Retrofit, GSON, OkHttp,Picasso.\n
• Used Android Junit to write the test cases.\n
Achievements:\n
• Developed an application for the university and delivered it.\n
Technologies Used: Android, Java, Android Studio, REST Web Service.\n
        \n
ACADEMIC PROJECTS\n
• Simple E-Commerce, Maharishi University of Management (2018): Designed and developed an e-commerce application capable of handling inventory of the products, customer registration, and shopping cards. Technologies Used: Java/J2EE, HTML. CSS, JSP, Maven, Git, JavaScript, Ajax, JavaScript, JQuery, Tomcat\n
• iShop, Maharishi University of Management (2018): Designed and developed this e-commerce application. Technologies Used: Java, Spring Boot, Jquery, HTML. CSS, MySQL, Git, Maven, Ajax, JSON, JavaScript, Spring Suit Tool.\n
• Meditation Information System: Designed and developed this web application. Technologies Used: Node.js, Angular, ExpressJS, MongoDB, mLAB.\n
        \n
EDUCATION \n
Master of Science in Computer Science\n
(In progress via distance education courses, expected completion December 2020)\n
Maharishi University of Management, Fairfield, Iowa\n
Key Courses: Web Application Programming, Software Engineering,\n
Algorithm, Modern Web Applications\n
Bachelor of Science in ‘Computer Engineering’\n
Gaziantep University, Gaziantep, Turkey\n
Key Courses: Web Application Programming, Computer Network, Java Programming\n
Data Structures.</string>
</resources>